Create inital cloudflare hmac token creation implementation